--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Test</string>
 
     <!-- confirm sms code fragment -->
+    <string name="title_toolbar">Вход в мобильный банк</string>
     <string name="title_confirm_sms">Введите код,\nполученный из SMS</string>
     <string name="resend_sms_code">Отправить код повторно</string>
     <string name="timer_sms_code">Отправить код повторно через</string>
